Again to fotorama

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,18 +8,18 @@
   <h3>Галлерея сайта</h3>
 
   
-<!--   <div class="fotorama" data-autoplay="true">
+  <div class="fotorama" data-autoplay="true">
      <% @photos.each do |photo| %>
       <img src="<%= photo.image_url(:normal) %>" /> 
      <% end %> 
   </div>
- -->  
+  
 
-  <div class="slider">
-     <% @photos.each do |photo| %>
-      <li><img src="<%= photo.image_url(:normal) %>" /> </li>
-     <% end %> 
-  </div>
+ 
+
+  
+
+
 
 
   <% end %>
