--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,23 @@
 
   </head>
 
-  <body style="margin-top: 70px;">
+  <body style="margin-top: 70px; padding-bottom: 70px">
+  
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+  <div class="container">
+    
+
+
+    <div class="navbar navbar-inverse navbar-fixed-top" >
+      
         <div class="navbar-header">
+          
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+
           <%=  link_to(I18n.t("project_name"),root_path,class: "navbar-brand") %>
         </div>
          <div class="navbar-collapse collapse">
@@ -38,20 +45,24 @@
           </ul>
           
         </div><!--/.navbar-collapse -->
-      </div>
+      
     </div>
 
-    <div class="container">
+    
+
       <%= breadcrumbs  :separator => " &rsaquo; " %>
       <%=render 'layouts/messages'%>
       <%= yield %>
+
+    
     </div><!-- /.container -->
 
 
-  <div id="footer">
-      <div class="container">
-        <p class="muted credit">Copiright 2013 </p>
-      </div>
+
+  <div class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+      
+        Copiright 2013 
+      
   </div>
   
   </body>
