--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 
-  <div class="span20" style="width: 70%; margin: 0 auto;">
+  <div>
 
 
 
@@ -15,22 +15,19 @@
   </div>
   
 
- 
-
-  
-
-
 
 
   <% end %>
 
   
   <% if @novelty  %>
-  <h3>Главная новость</h3>
+  <div class="jumbotron" style="padding:0px">
+  <h2> <%=  @novelty.title %> </h2>
     <div>
       <img src = "<%= @novelty.first_image_src %>" height="30%" width="30%" style="float: left; padding-right: 20px;" />
       <p><%= raw @novelty.digest %> <%= link_to t("more"), novelty_path(@novelty) %> </p>
     </div>
+  </div>
   <% end %>
 
 
@@ -49,18 +46,17 @@
 
   <% if @last_photos  %>
   <h3>Последние фотографии</h3>
-  <div class="row">    
-
+  <div class="row" style="padding-bottom: 70px">    
  
       <% @last_photos.each do |photo|  %>
        <div class="col-sm-3">
+       <div class="thumbnail"> 
          <a href=<%= gallery_show_path(photo) %> class="thumbnail" >
-          <%= image_tag photo.image_url(:small), style: "height: 100px;" %>
+          <%= image_tag photo.image_url(:thumb), style: "height: 150px;" %>
          </a>
+         </div>
        </div>
       <% end %>      
-
-    
 
   </div>
 
