--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', user_photo_path(current_user,@photo) %> |
-<%= link_to 'Back', user_photos_path(current_user) %>
+<%= link_to 'Show', user_photo_path(@user,@photo) %> |
+<%= link_to 'Back', user_photos_path(@user) %>
