--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,19 +1,64 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2><%= t("edit_user") %></h2>
+
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-vertical' }) do |f| %>
+  
+  
   <%= f.error_notification %>
   <%= display_base_errors resource %>
-  <%= f.input :name %>
-  <%= f.input :last_name, :autofocus => true, :required => true %>
-  <%= f.input :adress, :autofocus => true, :required => true %>
-  <%= f.input :zip_code, :autofocus => true, :required => true %>
-  <%= f.input :city, :autofocus => true, :required => true %>
-  <%= f.input :country, :autofocus => true, :required => true %>
-  <%= f.input :phone, :autofocus => true %>
-  <%= f.input :email, :required => true %>
-  <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-  <%= f.input :password_confirmation, :required => false %>
-  <%= f.file_field :avatar %>
-  <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
+  
+  
+  <div class="form-group">
+  <%= f.input :name, :autocomplete => "off",:input_html => {class: "form-control"}  %>
+  </div>
+  
+  <div class="form-group">
+  <%= f.input :last_name, :autofocus => true, :required => true, :input_html => {class: "form-control"} %>
+  </div>
+  
+  <div class="form-group">
+   <%= f.input :adress, :autofocus => true, :required => true, :input_html => {class: "form-control"}  %>
+  </div>
+  
+  <div class="form-group">
+   <%= f.input :zip_code, :autofocus => true, :required => true, :input_html => {class: "form-control"}  %>
+  </div>
+ 
+  <div class="form-group">
+   <%= f.input :city, :autofocus => true, :required => true, :input_html => {class: "form-control"}  %>
+  </div>
+ 
+  <div class="form-group">
+   <%= f.input :country, :autofocus => true, :required => true, :input_html => {class: "form-control"}  %>
+  </div>
+ 
+  <div class="form-group">
+    <%= f.input :phone, :autofocus => true, :input_html => {class: "form-control"}  %>
+  </div>
+ 
+  <div class="form-group">
+   <%= f.input :email, :required => true, :input_html => {class: "form-control"}  %>
+  </div>
+ 
+  <div class="form-group">
+   <%= f.input :about,  :input_html => { :class => "redactor form-control"} %>
+  </div>
+ 
+  <div class="form-group">
+  <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false, :input_html => {class: "form-control"} %>
+  </div>
+  
+  <div class="form-group">
+  <%= f.input :password_confirmation, :required => false, :input_html => {class: "form-control"}  %>
+  </div>
+  
+  <div class="form-group">
+  <%= f.file_field :avatar, :input_html => {class: "form-control"}  %>
+  </div>
+  
+   <div class="form-group">
+  <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true, :input_html => {class: "form-control"}  %>
+  </div>
+
   <%= f.button :submit, 'Update', :class => 'btn-primary' %>
 <% end %>
 <h3>Cancel my account</h3>
