Исправил баг с токенинпутом (при выборе существующего тега он показывался в виде цифры после сохранения)

--- a/app/views/layouts/user_profile_layout.html.erb
+++ b/app/views/layouts/user_profile_layout.html.erb
@@ -55,11 +55,10 @@
 
   
   
-
-  <div id="footer">
-      <div class="container">
-        <p class="muted credit">Copiright 2013 </p>
-      </div>
+  <div class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+      
+        Copiright 2013 
+      
   </div>
     
 
