--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,11 +8,11 @@
   
   
   <div class="form-group">
-  <%= f.input :name, :autocomplete => "off",:input_html => {class: "form-control"}  %>
+  <%= f.input :name, :input_html => {class: "form-control", :autocomplete => "off"}  %>
   </div>
   
   <div class="form-group">
-  <%= f.input :last_name, :autofocus => true, :required => true, :input_html => {class: "form-control"} %>
+  <%= f.input :last_name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   </div>
   
   <div class="form-group">
