User profile accessible for all

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -3,6 +3,8 @@
 
 <%= link_to t('.new'), new_user_photo_path(@user),{class: "btn btn-primary"} if can? :manage, @photo %>
 
+<%= will_paginate(@photos) %>
+
 <table class="table table-striped">
   <thead>
     <tr >
