--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -5,6 +5,8 @@
 
 <ul class="nav">
   <li><%= link_to "Фотографии",user_photos_path(@user) %></li>
+  <li><%= link_to "Облако",user_cloud_path(@user) %></li>
+
   <li><%= link_to "Сообщения",user_messages_path(@user) if @user ==  current_user %></li>
   <li><%= link_to "Конкурсы",competitions_path if @user ==  current_user %> </li>
   <li><%= link_to "Жюри",jury_choose_competition_path if @user.in_jury? && @user ==  current_user %></li>
