Left align for main layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,8 @@
   <body style="margin-top: 70px; padding-bottom: 70px">
   
 
-  <div class="container">
-    
-
-
     <div class="navbar navbar-inverse navbar-fixed-top" >
-      
+      <div class="container">
         <div class="navbar-header">
           
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -45,25 +41,27 @@
           </ul>
           
         </div><!--/.navbar-collapse -->
-      
+      </div>
     </div>
 
     
-
+    <div class="container">
       <%= breadcrumbs :separator => " &rsaquo; " %>
       <%=render 'layouts/messages'%>
       <%= yield %>
+    </div>
 
     
-    </div><!-- /.container -->
+  
 
 
-
+  <footer>
   <div class="navbar navbar-default navbar-fixed-bottom" role="navigation">
       
         Copiright 2013 
       
   </div>
+  </footer>
   
   </body>
 </html>
