--- a/app/views/user_profile/cloud.html.erb
+++ b/app/views/user_profile/cloud.html.erb
@@ -1,5 +1,5 @@
 
-<div id="whatever">
+<div id="whatever" class="col-md-8">
 <% @freqs.each do |f| %>
   
   <a href = "<%= tagged_photos_path(user_id: @user, name: f[0]) %>" rel = "<%= f[1] %>"> <%= f[0] %> </a>
@@ -15,8 +15,8 @@
 <script>
 $.fn.tagcloud.defaults = {
   size: {start: 18, end: 26, unit: 'pt'},
-  color: {start: '#cde', end: '#f52'}
-};
+  color: {start: '#6a95bd', end: '#cc6c60'}
+}; 
 
 $(function () {
   $('#whatever a').tagcloud();
