--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -1,14 +1,19 @@
-<h1>Последние фотографии</h1>
+
 <br>
 
 <%= will_paginate @last_photos %>
 
 <div class="row">
+    
+    <div class="col-lg-12">
+      <h1>Последние фотографии</h1>
+      
+    </div>
 
     <% @last_photos.each_with_index do |photo,index| %>
   
-    <div class="col-sm-3">
-    <div class="thumbnail">  
+    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+    
       
 
     <%= render partial: "photos/thumb", locals: { photo: photo, path: gallery_show_path(photo) } %>
@@ -18,7 +23,7 @@
 
     
 
-    </div>
+    
     
     
     
