--- a/app/views/layouts/user_profile_layout.html.erb
+++ b/app/views/layouts/user_profile_layout.html.erb
@@ -11,7 +11,6 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
-  
 
   </head>
 
@@ -49,7 +48,7 @@
 
     <div class="container">
       <%=render 'layouts/messages'%>
-      <div class="col-md-2"><%= render 'layouts/user_sidebar' %></div>
+      <div class="col-md-2" style="border: dotted 1px silver"><%= render 'layouts/user_sidebar' %></div>
       <div class="col-md-10"><%= yield%> </div>
     </div>
 
