--- a/app/views/comment/_comments.html.erb
+++ b/app/views/comment/_comments.html.erb
@@ -1,13 +1,13 @@
 <h4><%= t("comments") %></h4>
 
-<% comments.each do |c| %>
+<% resource.comments.each do |c| %>
 
 <div>
   <%= image_tag(c.user.avatar_url(:thumb),class: "img-polaroid",style: "float: left;margin-right: 5px;") %> 
   <div><%= c.comment %></div>
 </div>
 
-<%= link_to del_icon, [current_user,@photo,c], method: :delete, data: { confirm: 'Are you sure?' } if can? :destroy, c %>
+<%= link_to del_icon, [current_user,resource,c], method: :delete, data: { confirm: 'Are you sure?' } if can? :destroy, c %>
 
 <div style="clear: left; height: 20px;" ></div>
 
