--- a/app/views/letters/index.html.erb
+++ b/app/views/letters/index.html.erb
@@ -15,7 +15,7 @@
     <% @letters.each do |letter| %>
       <tr>
         <td><%= letter.title %></td>
-        <td><%= letter.recipients %></td>
+        <td><%= letter.recipient_names %></td>
         <td><%= link_to show_icon, user_letter_path(@user.id,letter) %></td>
         <td><%= link_to edit_icon, edit_user_letter_path(@user.id,letter) %></td>
         <td><%= link_to del_icon, user_letter_path(@user.id, letter), method: :delete, data: { confirm: 'Are you sure?' } %></td>
