--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -1,13 +1,23 @@
 <div style="padding-top: 20px">
   <%= @user && @user.avatar && image_tag(@user.avatar_url(:thumb),class: "img-polaroid") %>
 </div>
-<ul class="nav">
+<ul class="nav nav-pills" >
   <li><%= link_to "Фотографии",user_photos_path(@user) %></li>
   <li><%= link_to "Облако",user_cloud_path(@user) %></li>
 
   <li><%= link_to "Тикеты",user_messages_path(@user) if @user ==  current_user %></li>
-  <li><%= link_to "Сообщения",user_letters_path(@user) if @user ==  current_user %></li>
   
+  
+  <li class="dropdown">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+      Сообщения <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu">
+      <li><%= link_to "Входящие",user_letters_path(@user) if @user ==  current_user %></li>
+      <li><%= link_to "Исходящие",user_letters_path(@user) if @user ==  current_user %></li>    
+    </ul>
+  </li>
+
 
   <li><%= link_to "Жюри",jury_choose_competition_path if @user.in_jury? && @user ==  current_user %></li>
   <li> <%= link_to I18n.t("change_password"), edit_user_registration_path if user_signed_in? && @user ==  current_user%></li>
