--- a/app/views/gallery/show.html.erb
+++ b/app/views/gallery/show.html.erb
@@ -19,5 +19,5 @@
 <hr/>
 
 
-<%= render partial: "comment/form", locals: { user: current_user, photo: @photo} %>
+<%= render partial: "comment/form", locals: { user: current_user, resource: @photo} %>
 
