--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -3,7 +3,7 @@
 <table class="table table-striped">
   <thead>
     <tr >
-      <th class="span2">Title</th>
+      <th class="span2"><%= t(".title") %></th>
       <th><%=  t(".content")%></th>
       
       <th><%= t(".status") %></th>
