Сделана выделение активного меню в профиле пользователя

--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -7,13 +7,13 @@
 
 </div>
 <ul class="nav nav-pills" >
-  <li><%= link_to "Фотографии",user_photos_path(@user) %></li>
-  <li><%= link_to "Облако",user_cloud_path(@user) %></li>
+  <li class= <%= "active" if params[:controller] == "photos" %>><%= link_to "Фотографии",user_photos_path(@user) %></li>
+  <li class= <%= "active" if params[:controller] == "user_cloud" %>><%= link_to "Облако",user_cloud_path(@user) %></li>
 
-  <li><%= link_to "Тикеты",user_messages_path(@user) if @user ==  current_user %></li>
+  <li class= <%= "active" if params[:controller] == "messages" %>><%= link_to "Тикеты",user_messages_path(@user) if @user ==  current_user %></li>
   
   
-  <li class="dropdown">
+  <li class="dropdown <%= "active" if params[:controller] == "letters" || params[:controller] == "incoming_letters" %>">
     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
       Сообщения <span class="caret"></span><%= incoming_mail_icon %>
     </a>
@@ -24,6 +24,6 @@
   </li>
 
 
-  <li><%= link_to "Жюри",jury_choose_competition_path if @user.in_jury? && @user ==  current_user %></li>
-  <li> <%= link_to I18n.t("change_password"), edit_user_registration_path if user_signed_in? && @user ==  current_user%></li>
+  <li class= <%= "active" if params[:controller] == "jury" %>><%= link_to "Жюри",jury_choose_competition_path if @user.in_jury? && @user ==  current_user %></li>
+  <li class= <%= "active" if params[:controller] == "registrations" %>> <%= link_to I18n.t("change_password"), edit_user_registration_path if user_signed_in? && @user ==  current_user%></li>
 </ul>
