Можно комментировать статьи. Убрана модель Admin::Article. Переделаны partials для comments создан отдельный их подвид для ресурсов вне user.

--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= admin_article.title %></td>
         <td><%= link_to show_icon, admin_article %></td>
         <td><%= link_to edit_icon, edit_admin_article_path(admin_article) %></td>
-        <td><%= link_to del_icon, admin_article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to del_icon, [:admin, admin_article], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
