--- a/app/views/layouts/_common_menu.html.erb
+++ b/app/views/layouts/_common_menu.html.erb
@@ -12,6 +12,6 @@
 </li>
 
 <li class= <%= "active" if params[:controller] == "articles" %>>
-  <%=link_to(I18n.t("articles_"),list_articles_path) if can? :read, Admin::Article %>
+  <%=link_to(I18n.t("articles_"),list_articles_path) if can? :read, Article %>
 </li>
 
