Проверка профиля при подаче заявки на конкурс ФИАП

--- a/app/views/admin/competitions/index.html.erb
+++ b/app/views/admin/competitions/index.html.erb
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Competition', new_admin_competition_path %>
+<%= link_to t(".new"), new_admin_competition_path, class: "btn btn-primary" %>
