--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -3,27 +3,10 @@
   <%= @user && @user.avatar && image_tag(@user.avatar_url(:thumb),class: "img-polaroid") %>
   </div>
   <small ><%= @user && @user.full_name %></small>
-  
-
 </div>
+
 <ul class="nav nav-pills" >
   <li class= <%= "active" if params[:controller] == "photos" %>><%= link_to "Фотографии",user_photos_path(@user) %></li>
   <li class= <%= "active" if params[:controller] == "user_cloud" %>><%= link_to "Облако",user_cloud_path(@user) %></li>
-
-  <li class= <%= "active" if params[:controller] == "messages" %>><%= link_to "Тикеты",user_messages_path(@user) if @user ==  current_user %></li>
-  
-  
-  <li class="dropdown <%= "active" if params[:controller] == "letters" || params[:controller] == "incoming_letters" %>">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-      Сообщения <span class="caret"></span><%= incoming_mail_icon %>
-    </a>
-    <ul class="dropdown-menu">
-      <li><%= link_to "Исходящие",user_letters_path(@user) if @user ==  current_user %></li>
-      <li><%= link_to "Входящие" ,user_incoming_letters_path(@user) if @user ==  current_user %></li>    
-    </ul>
-  </li>
-
-
-  <li class= <%= "active" if params[:controller] == "jury" %>><%= link_to "Жюри",jury_choose_competition_path if @user.in_jury? && @user ==  current_user %></li>
-  <li class= <%= "active" if params[:controller] == "registrations" %>> <%= link_to I18n.t("change_password"), edit_user_registration_path if user_signed_in? && @user ==  current_user%></li>
+  <% render :partial => "current_user_links", locals: {user: @user} if @user == current_user  %>
 </ul>
