--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -10,7 +10,7 @@
 </div>
 
 <ul class="nav nav-pills" >
-  <li class= <%= "active" if params[:controller] == "photos" %>><%= link_to "Фотографии",user_photos_path(@user) %></li>
-  <li class= <%= "active" if params[:controller] == "user_cloud" %>><%= link_to "Облако",user_cloud_path(@user) %></li>
-  <% render :partial => "current_user_links", locals: {user: @user} if @user == current_user  %>
+  <li class= <%= "active" if params[:controller] == "photos" %>><%= link_to t("photos_"),user_photos_path(@user) %></li>
+  <li class= <%= "active" if params[:controller] == "user_cloud" %>><%= link_to t("cloud"),user_cloud_path(@user) %></li>
+  <%= render(:partial => "layouts/current_user_links", locals: {user: @user}) if @user == current_user %>
 </ul>
