--- a/app/views/admin/topics/_form.html.erb
+++ b/app/views/admin/topics/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@topic) do |f| %>
+<%= simple_form_for([:admin, @topic]) do |f| %>
   <%= f.error_notification %>
 
     <div class="form-group">
