--- a/app/views/admin/topics/show.html.erb
+++ b/app/views/admin/topics/show.html.erb
@@ -10,5 +10,5 @@
   <%= @topic.content %>
 </p>
 
-<%= link_to 'Edit', edit_topic_path(@topic) %> |
-<%= link_to 'Back', topics_path %>
+<%= link_to 'Edit', edit_admin_topic_path(@topic) %> |
+<%= link_to 'Back', admin_topics_path %>
