--- a/app/views/competition_photos/index.html.erb
+++ b/app/views/competition_photos/index.html.erb
@@ -10,22 +10,16 @@
 
     <% @competition_photos.each_with_index do | competition_photo,index| %>
  
-    <div class="col-sm-3" style="height: 290px;">
-    <div class="thumbnail">  
-      <a class="thumbnail" >
-          <%= image_tag competition_photo.image_url(:thumb),data: {src: competition_photo.image_url(:thumb)} %>
-      </a>
-    
-    <div class="caption">
-     <small>  <%= "#{competition_photo.title} (#{competition_photo.nomination.title})" %>     </small>
-     <br/>
-     <%= link_to del_icon, competition_competition_photo_path(@competition,competition_photo), method: :delete, data: { confirm: 'Are you sure?' } unless @competition.overdue? %>
-    </div>  
+    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+      <%= render partial: "photos/thumb", locals: { photo: competition_photo, path: gallery_show_path(competition_photo.photo) } %>
+      <%- l1 = link_to del_icon, competition_competition_photo_path(@competition,competition_photo), method: :delete, data: { confirm: 'Are you sure?' } unless @competition.overdue? %>
+      <%= render partial: "photos/caption", locals: { photo: competition_photo, links: [l1] } %>
     </div>
-    
-    
-  </div>
 
+  
+
+
+    
   <% end %>
   
 </div>
