--- a/app/views/competitions/_choose_form.html.erb
+++ b/app/views/competitions/_choose_form.html.erb
@@ -5,10 +5,14 @@
   </div>
 
   <div id = "photos">
+    
+  <div class="row">
     <% @photos.each_with_index do |photo,index| %>
-     <%=link_to_function image_tag(photo.image_url(:thumb),id: "ph#{photo.id}",data: {src: photo.image_url(:thumb)}),"add_photo(#{photo.id})" %>
+         
+      <%=link_to_function(image_tag(photo.image_url(:thumb)),"add_photo(#{photo.id})",id: "ph#{photo.id}",:class => "thumbnail") %>
      
     <% end %>
+  </div>  
   </div>  
   
 </div>
