Site_photo bug with user == nil removed

--- a/app/views/competition_photos/_choose_form.html.erb
+++ b/app/views/competition_photos/_choose_form.html.erb
@@ -3,6 +3,12 @@
   <div id="aj">
     <%= ajax_will_paginate photos %>
   </div>
+  
+   <%= form_tag "ho" do |f| %>
+    <%= f.input :text %>
+      
+  <% end %>
+  
 
   <div id = "photos">
     <% @photos.each_with_index do |photo,index| %>
