--- a/app/views/competitions/aply.html.erb
+++ b/app/views/competitions/aply.html.erb
@@ -16,7 +16,7 @@
 
     <%= link_to t(".choose_photo"),choose_photo_competition_path(@competition), remote: true  %> <br/>
 <br>
-    <%= f.button :submit,input_html: {class: "btn btn-default"} %>
+    <%= f.button :submit,input_html: {class: "btn btn-default"},value: "Сохранить выбор" %>
     
   <div id="next"></div>
 <% end %>
