Можно выбирать главную статью и прочие статьи для главной страницы

--- a/app/views/admin/messages/show.html.erb
+++ b/app/views/admin/messages/show.html.erb
@@ -8,6 +8,10 @@
   <%= @message.content %>
 </p>
 
+
+<script>
+  <%= raw @message.content.html_safe %>
+</script>
 <p>
   <strong><%= t(".status") %>:</strong>
   <%= @message.status_text %>
