--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   
-    <title><%= content_for?(:title) ? yield(:title) :  "Photohome72" %></title>
+    <title><%= content_for?(:title) ? yield(:title) :  "Тюменский дом фотографии" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Photohome" %>">
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
