--- a/app/views/admin/banner_placements/_form.html.erb
+++ b/app/views/admin/banner_placements/_form.html.erb
@@ -3,16 +3,21 @@
 
 
     <div class="form-group">
-    <%= f.association :banner %>
+    <%= f.association :banner, :input_html => {class: "form-control"} %>
+    </div>
+    
+    <div class="form-group">
+    <%= f.input :place_id,collection: Admin::BannerPlacement::PLACES, label_method: Admin::BannerPlacement::LABEL, value_method: Admin::BannerPlacement::VALUE,
+    :input_html => {class: "form-control"}%>
     </div>
     <div class="form-group">
-    <%= f.input :place_id %>
+    <%= f.input :active%>
     </div>
     <div class="form-group">
-    <%= f.input :start_date %>
+    <%= f.input :start_date, :input_html => {class: "form-control"} %>
     </div>
     <div class="form-group">
-    <%= f.input :end_date %>
+    <%= f.input :end_date, :input_html => {class: "form-control"} %>
     </div>
 
 
