--- a/app/views/admin/banner_placements/show.html.erb
+++ b/app/views/admin/banner_placements/show.html.erb
@@ -1,23 +1,28 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Banner:</strong>
+  <strong><%= t(".banner") %>:</strong>
   <%= @admin_banner_placement.banner_id %>
 </p>
 
 <p>
-  <strong>Place:</strong>
-  <%= @admin_banner_placement.place_id %>
+  <strong><%= t("place") %>:</strong>
+  <%= @admin_banner_placement.place_label %>
 </p>
 
 <p>
-  <strong>Start date:</strong>
-  <%= @admin_banner_placement.start_date %>
+  <strong><%= t(".active") %>:</strong>
+  <%= @admin_banner_placement.active? %>
 </p>
 
 <p>
-  <strong>End date:</strong>
-  <%= @admin_banner_placement.end_date %>
+  <strong><%= t(".start_date") %>:</strong>
+  <%= ld @admin_banner_placement.start_date %>
+</p>
+
+<p>
+  <strong><%= t(".end_date") %>:</strong>
+  <%= ld @admin_banner_placement.end_date %>
 </p>
 
 <%= link_to 'Edit', edit_admin_banner_placement_path(@admin_banner_placement) %> |
