--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,55 +15,39 @@
 
   </head>
 
-  <body style="margin-top: 70px;">
+  <body >
   
-    
-    <div class="navbar navbar-inverse navbar-fixed-top" >
-    
-      <div class="container">
-    
-        <div class="navbar-header">
-            
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-
-        <%=  link_to(I18n.t("project_name"),root_path,class: "navbar-brand") %>
-        </div>
-         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-           
-            <%= render 'layouts/common_menu' %>
-            <%= render 'layouts/admin_menu' if current_user && current_user.is_stuff? %>
-            <%= render 'layouts/navigation' %>
-            <%= render 'layouts/lang_select' %>
-          
-          </ul>
-          
-        </div><!--/.navbar-collapse -->
-      </div>
-    </div>
-
-    
-    <div class="container">
-      <%= render 'banners/top' %>        
-      <%= breadcrumbs :separator => " &rsaquo; " %>
-      <%= render 'layouts/messages' %>
-      <%= yield %>
      
-    </div>
+        
     
-    <br>
-    <br>
-    <br>
 
-    <footer style="width: 100%">
-      <p>&copy; Company 2013</p>
-     </footer>
-
+      <section class="container">
+      <div class="content row">
+          <%= render 'layouts/header' %>
+          <%= render 'banners/top' %>        
+        <section class="main col col-lg-12">
+          
+          <%= breadcrumbs :separator => " &rsaquo; " %>
+          <%= render 'layouts/messages' %>
+          <%= yield %>
+        </section><!-- main -->
+       
+      </div><!-- content -->
     
+    </section><!-- container -->    
+ 
+  <section class="container">
+  <footer class="row">
+    <nav class="col-lg-12">
+      <ul class="breadcrumb">
+        <li><a href="about.php">About the Roux Academy</a></li>
+        <li><a href="privacypolicy.php">Privacy Policy</a></li>
+        <li><a href="http://rouxacademy.com">Roux Academy Website</a></li>
+      </ul><!-- breadcrumb -->
+    </nav><!-- nav -->
+  </footer><!-- footer -->
+</section><!-- container -->
+
   
     
   
