--- a/app/views/banners/_top.html.erb
+++ b/app/views/banners/_top.html.erb
@@ -1,5 +1,6 @@
-<div style="padding-bottom: 10px">
-<% BannerGenerator.new.top.each do |banner| %>
-  <%= image_tag banner.image_url %>
-<% end %>
+<div id="top_banners" style="padding-bottom: 10px" >
+  
+ <%= link_to image_tag(BannerGenerator.new.top.image_url), "/competitions",:target => "_blank" %>
+
 </div>
+
