--- a/app/views/competitions/_choose_form.html.erb
+++ b/app/views/competitions/_choose_form.html.erb
@@ -1,5 +1,12 @@
-<div id="dialog">
-
+<div id="dialog" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        
   <div id="aj">
     <%= ajax_will_paginate photos %>
   </div>
@@ -15,4 +22,13 @@
   </div>  
   </div>  
   
-</div>
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal 
