--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,18 +1,14 @@
 
 
   <% if @photos  %>
-  <h3>Галлерея сайта</h3>
-
-  
-<div class="fotorama" data-autoplay="true">
+     
+ <div class="fotorama" data-autoplay="true" style="position:relative;margin-right:10%;margin-left:10%;" >
      <% @photos.each do |photo| %>
-      <img src="<%= photo.image_url(:normal) %>" /> 
+      <img src="<%= photo.image_url(:carousel) %>" /> 
      <% end %> 
   </div>
  
  
-
-
 
   <% end %>
 
